k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: filmapi
  labels:
    app.kubernetes.io/name: filmapi
    app.kubernetes.io/part-of: filmapi-stack
